2005-10-10  Jeremy Cribb <jcribb@email.unc.edu>
	* get_mips.m: now uses a default 'min'imum intensity projection.

2005-10-10  Jeremy Cribb <jcribb@email.unc.edu>
	* mip.m: added documentation about the "stride" parameter.

2005-09-16  Jeremy Cribb <jcribb@email.unc.edu>
  * mip.m: changed comments.

2005-09-04  Jeremy Cribb <jcribb@email.unc.edu>
  * imscalebar.m: removed output variable.

2005-09-04  Jeremy Cribb <jcribb@email.unc.edu>
  * imscalebar.m: added.  puts a scalebar of desired length and color onto an image at a desired location (bottom-right, bottom-left, top-left, top-right).  It gets a little weird when the Y-Direction of the plot is reversed, but I'll deal with that later.  It also squares up the axis so that the pixels are square; this lets the scalebar work at angles.

2005-05-16  Jeremy Cribb <jcribb@email.unc.edu>
	* mip.m: adjusted output so that if an output variable is defined, the MIP is outputted as a 2D matrix, otherwise it just displays an image of the MIP.

2005-05-15  Jeremy Cribb <jcribb@email.unc.edu>
	* raw2img.m: fixed a bug that offset the frame number by one.

2005-05-09  Jeremy Cribb <jcribb@email.unc.edu>
	* swaplines.m: added.  Swaps lines in image(s) if Pulnix misbehaves.

2005-02-11  Ben Wilde <wilde@cs.unc.edu>
	* beadOrbitAngles.m: Added this file, which computes the angle that a bead orbits around a rod.

2005-02-10  Jeremy Cribb <jcribb@email.unc.edu>
	* mip.m: fixed time bug for when file started in middle.

2005-02-09  Jeremy Cribb <jcribb@email.unc.edu>
	* raw2avi.m: added some image processing for handling low-light datasets.
	* clipraw.m: added.  cuts out and saves a range of frames as a new RAW file.

2005-01-26  Jeremy Cribb <jcribb@email.unc.edu>
	* get_mips.m: added.  runs and saves single or batches of max(min)imum intensity projection images.  This function calls mip.m and is for batch processing only.

2005-12-20  Jeremy Cribb <jcribb@email.unc.edu>